Fixed fonts & added favicon
Fonts now loaded over HTTPS

--- a/webroot/assets/css/custom/custom.sass
+++ b/webroot/assets/css/custom/custom.sass
@@ -1,5 +1,5 @@
 @import 'bourbon/bourbon'
-@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900%7COpen+Sans:300,400,600,700)
+@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900%7COpen+Sans:300,400,600,700)
 
 .kaushan
     font-family: 'Kaushan Script'
